<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WorkoutActivity" >
    <item android:id="@+id/action_add_exercise"
        android:title="@string/action_add_exercise"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_launch"
        android:title="@string/action_launch"
        android:icon="@drawable/ic_menu_play_clip"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
</menu>
